# SheetSmith

./: .gitignore  Cargo.toml  LICENSE.md  README.md
sheetsmithcli/: Cargo.toml
sheetsmithcli/src/: cli_args.rs  main.rs  utils.rs
sheetsmithgui/: Cargo.toml
sheetsmithgui/src/: main.rs
sheetsmithlib/: Cargo.toml
sheetsmithlib/src/: algorithms.rs  lib.rs  utils.rs
sheetsmithlib/src/algorithms/: guillotiere_alg.rs
src/: algorithms.rs  main.rs  utils.rs
src/algorithms/: guillotiere_alg.rs
src/utils/: mod.rs
