[package]
name = "sheetsmith"
version = "0.1.0"
edition = "2024"
description = "The goto CLI for sprite sheet packing"
authors = ["Simon Klovdahl <me@lazyllama.xyz>"]
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.29.0"
guillotiere = "0.7.0"
image = "0.25.10"
ratatui = "0.30.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
