[package]
name = "sheetsmithgui"
edition = "2024"
version = "0.1.1"
description = "The goto app for sprite sheet packing"
authors = ["Simon Klovdahl <me@lazyllama.xyz>"]
license = "MIT"

[dependencies]
sheetsmithlib = { path = "../sheetsmithlib" }
anyhow = "1.0.102"
image = "0.25.10"
eframe = "0.34.1"
egui_extras = { version = "0.34.1", features = ["all_loaders"] }
